<resources>
    <string name="app_name">卟识什物</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">用户名</string>
    <string name="user_passwd">密 码</string>
    <string name="user_login">登录</string>
    <string name="history">历史记录</string>
    <string name="search">拍照识图</string>
    <string name="user">用户中心</string>
</resources>