<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">


    <EditText
        android:id="@+id/usertxt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:autofillHints="@string/user_name"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
       android:background="@drawable/shape"
        android:id="@+id/passwdtxt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:hint="@string/user_passwd"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usertxt"
        app:layout_constraintVertical_bias="0.084"
        android:autofillHints="@string/user_passwd" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:onClick="onLoginButtonClicked"
        android:text="@string/user_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#3CB371"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwdtxt"
        app:layout_constraintVertical_bias="0.202"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="卟识什物　·　登录"
        android:textColor="#008000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/usertxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />


</androidx.constraintlayout.widget.ConstraintLayout>